sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:16: error: type mismatch;
 found   : Unit
 required: Boolean
    } else if (i = 0){
                 ^